<resources>
    <string name="app_name">Flightscry</string>
    <string name="airport_code">Airport code:</string>
    <string name="flight_information">Flight Information </string>
    <string name="flight_number">Flight number: </string>

    <string name="departure">Departure</string>
    <string name="departure_time">Departure time: </string>

    <string name="arrival">Arrival </string>
    <string name="arrival_time">Arrival time: </string>
    <string name="abc">ABC </string>
</resources>