<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <net.skyscanner.backpack.card.BpkCardView
        android:id="@+id/departureCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cornerStyle="large"
        app:elevationLevel="focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <net.skyscanner.backpack.text.BpkText
                style="@style/bpkTextLg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextSm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airport_code" />

                <net.skyscanner.backpack.text.BpkText
                    android:id="@+id/airportCodeText"
                    style="@style/bpkTextSm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/abc" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextSm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_time" />

                <net.skyscanner.backpack.text.BpkText
                    android:id="@+id/departureTimeText"
                    style="@style/bpkTextSm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="12:00 PM" />

            </LinearLayout>

        </LinearLayout>
    </net.skyscanner.backpack.card.BpkCardView>

    <net.skyscanner.backpack.card.BpkCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cornerStyle="large"
        app:elevationLevel="focused"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="228dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <net.skyscanner.backpack.text.BpkText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/flight_information" />
        </LinearLayout>

    </net.skyscanner.backpack.card.BpkCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
